[tool.poetry]
name = "mpp"
version = "1.0.0"
description = ""
authors = ["DAQ <daq@mirero.co.kr>"]

[tool.poetry.dependencies]
python = "~3.10"
numpy = "1.23.1"
scipy = "1.9.0"
pandas = "1.4.3"
matplotlib = "3.5.2"
opencv-python = "~4.6.0"
Pillow = "9.2.0"
scikit-learn = "1.1.2"
scikit-image = "0.19.3"
grpcio = "~1.48.0"
grpcio-tools = "~1.48.0"
imutils = "0.5.4" 
pytesseract = "0.3.10"
numba = "0.57.1"
pythonnet = "3.0.5" 
tifffile = "2024.2.12"
imagecodecs = { extras = ["all"], version = "2024.1.1"}
py-cpuinfo = "9.0.0"
psutil = "5.9.1"
colorama = "0.4.6"
seaborn = "0.13.2"
PyYAML = "6.0.1"
colour = "0.1.5"
mahotas = "1.4.15"
hyperspy = "2.1.0"
requests = "~2.32.3"
# TODO REMOVE not found in released environment
# fastapi = "^0.86.0" 
# uvicorn = {extras = ["standard"], version = "^0.19.0"}
# pydantic = "^1.10.2"
# typer = "^0.7.0"
# sqlalchemy = "^1.4.43"



[tool.poetry.group.full]
optional = false

[tool.poetry.group.full.dependencies]
tensorflow-gpu = "2.9.1"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow-addons = "0.19.0"  # tf 2.9 와 호환되는 가장 마지막 버전 
torch = { version = "1.12.1+cu116", source = "torch-gpu" }
torchvision = { version = "0.13.1+cu116", source="torch-gpu" }
tf-slim = "1.1.0"
ultralytics = "8.1.9"
thop = "0.1.1.post2209072238" # 이게 설치되면서 torch가 2.x 대로 업데이트되는 이슈가 있었음. 
redis-py-cluster = "2.1.3"


[tool.poetry.group.dev.dependencies]
pathlib = "^1.0.1"
pytest = "^7.1.3"
pytest-benchmark = "^3.4.1"
pytest-html = "^3.1.1"
dictdiffer = "^0.9.0"
wheel = "^0.37.1"
cmake = "^3.23.3"
Jinja2 = "^3.1.2"
docstring-parser = "^0.14.1"
docstring-to-markdown = "^0.10"
scikit-build = "0.18.1"
poethepoet = "^0.16.0"
ninja = "^1.10.2.4"
setuptools-scm = "^7.0.5"

[[tool.poetry.source]]
name = "torch-gpu"
url = "https://download.pytorch.org/whl/cu116"
priority = "explicit"

[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
torch = "python -m pip install torch==1.12.1+cu116 torchvision==0.13.1+cu116 --extra-index-url https://download.pytorch.org/whl/cu116"
torch-cpu = "pip install torch torchvision" # mpp linux 빌드 환경만을 위함.